syntax = "proto3";

package beam.v1;
option go_package = "github.com/sonr-io/core/beam";

enum EventType {
    EVENT_TYPE_UNSPECIFIED = 0;
    EVENT_TYPE_GET = 1;
    EVENT_TYPE_SET = 2;
    EVENT_TYPE_DELETE = 3;
    EVENT_TYPE_PUT = 4;
    EVENT_TYPE_SYNC = 5;
}

message Event {
    string peer = 1;
    EventType type = 2;
    StoreEntry entry = 3;
    Store store = 4;
}

message Store {
    map<string, StoreEntry> data = 1;
    int32 capacity = 2;
    int64 modified = 3;
    int64 ttl = 4;
}

message StoreEntry {
    string peer = 1;
    string key = 2;
    bytes value = 3;
    int64 expiration = 4;
    int64 created = 5;
    int64 modified = 6;
}
